--- a/app/app.css
+++ b/app/app.css
@@ -1,12 +1,11 @@
 body {
     margin: 0;
-    background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
-    display: flex;
+    padding: 0;
+    background-color: #f5f5f5;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     height: 100vh;
     width: 100vw;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;
   }
   
   main {
